@@ -23,7 +23,10 @@ import com.aionemu.gameserver.model.templates.zone.ZoneInfo;
 import com.aionemu.gameserver.model.templates.zone.ZoneTemplate;
 import com.aionemu.gameserver.model.vortex.VortexLocation;
 import com.aionemu.gameserver.services.ShieldService;
-import com.aionemu.gameserver.world.zone.handler.*;
+import com.aionemu.gameserver.world.zone.handler.MaterialZoneHandler;
+import com.aionemu.gameserver.world.zone.handler.ZoneHandler;
+import com.aionemu.gameserver.world.zone.handler.ZoneHandlerClassListener;
+import com.aionemu.gameserver.world.zone.handler.ZoneNameAnnotation;
 
 /**
  * @author ATracer, antness
@@ -61,8 +64,7 @@ public final class ZoneService implements GameEngine {
 				log.warn("Can't instantiate zone handler " + zoneName, ex);
 			}
 		}
-
-		return zoneHandler != null ? zoneHandler : new GeneralZoneHandler();
+		return zoneHandler;
 	}
 
 	public final void addZoneHandlerClass(Class<? extends ZoneHandler> handler) {
@@ -72,7 +74,7 @@ public final class ZoneService implements GameEngine {
 			for (String zoneNameString : zoneNames) {
 				try {
 					ZoneName zoneName = ZoneName.get(zoneNameString.trim());
-					if (zoneName == ZoneName.get("NONE"))
+					if (zoneName == ZoneName.NONE)
 						throw new RuntimeException();
 					zoneHandlers.put(zoneName, handler);
 				} catch (Exception e) {
@@ -92,53 +94,44 @@ public final class ZoneService implements GameEngine {
 		WorldZoneTemplate zone = new WorldZoneTemplate(worldSize, mapId);
 		PolyArea fullArea = new PolyArea(zone.getName(), mapId, zone.getPoints().getPoint(), zone.getPoints().getBottom(), zone.getPoints().getTop());
 		ZoneInstance fullMap = new ZoneInstance(mapId, new ZoneInfo(fullArea, zone));
-		fullMap.addHandler(getNewZoneHandler(zone.getName()));
 		zones.put(zone.getName(), fullMap);
-
 		Collection<ZoneInfo> areas = this.zoneByMapIdMap.get(mapId);
-		if (areas == null)
+		if (areas == null) {
 			return zones;
-
+		}
 		for (ZoneInfo area : areas) {
 			ZoneInstance instance;
 			switch (area.getZoneTemplate().getZoneType()) {
-				case FLY:
-					instance = new FlyZoneInstance(mapId, area);
-					break;
-				case NO_FLY:
-					instance = new NoFlyZoneInstance(mapId, area);
-					break;
-				case FORT:
+				case FLY -> instance = new FlyZoneInstance(mapId, area);
+				case NO_FLY -> instance = new NoFlyZoneInstance(mapId, area);
+				case FORT -> {
 					instance = new SiegeZoneInstance(mapId, area);
-					SiegeLocation siege = DataManager.SIEGE_LOCATION_DATA.getSiegeLocations().get(area.getZoneTemplate().getSiegeId().get(0));
+					SiegeLocation siege = DataManager.SIEGE_LOCATION_DATA.getSiegeLocations().get(area.getZoneTemplate().getSiegeId().getFirst());
 					if (siege != null) {
 						siege.addZone((SiegeZoneInstance) instance);
 						ShieldService.getInstance().attachShield(siege);
 					}
-					break;
-				case ARTIFACT:
+				}
+				case ARTIFACT -> {
 					instance = new SiegeZoneInstance(mapId, area);
 					for (int artifactId : area.getZoneTemplate().getSiegeId()) {
 						SiegeLocation artifact = DataManager.SIEGE_LOCATION_DATA.getArtifacts().get(artifactId);
 						if (artifact == null) {
-							log.warn("Missing siege location data for zone " + area.getZoneTemplate().getName().name());
+							log.warn("Missing siege location data for zone {}", area.getZoneTemplate().getName().name());
 						} else {
 							artifact.addZone((SiegeZoneInstance) instance);
 						}
 					}
-					break;
-				case PVP:
-					instance = new PvPZoneInstance(mapId, area);
-					break;
-				default:
+				}
+				case PVP -> instance = area.getZoneTemplate().getFlags() == 0 ? new DisablePvPZoneInstance(mapId, area) : new PvPZoneInstance(mapId, area);
+				default -> {
 					InvasionZoneInstance invasionZone = getIZI(area);
-					if (invasionZone != null) {
-						instance = invasionZone;
-					} else {
-						instance = new ZoneInstance(mapId, area);
-					}
+					instance = Objects.requireNonNullElseGet(invasionZone, () -> new ZoneInstance(mapId, area));
+				}
 			}
-			instance.addHandler(getNewZoneHandler(area.getZoneTemplate().getName()));
+			ZoneHandler zoneHandler = getNewZoneHandler(area.getZoneTemplate().getName());
+			if (zoneHandler != null)
+				instance.addHandler(zoneHandler);
 			zones.put(area.getZoneTemplate().getName(), instance);
 		}
 		return zones;
